made tab 3 into card

--- a/order-pizza.html
+++ b/order-pizza.html
@@ -176,108 +176,38 @@
         </div>
         <!--Toppings-->
         <div class="tab-pane fade border" id="toppings" role="tabpanel" aria-labelledby="toppings-tab">
-            <!--Title-->
-            <div class="bg-primary text-white p-2">Choose Toppings</div>
-            <!--Meats-->
-            <div class="m-3 mx-4">
-                <div class="row">
-                    <div class="col p-1 ps-2 border bg-light">
-                        Choose Meats
-                    </div>
+            <!--Main card-->
+            <div class="card">
+                <div class="card-header bg-primary text-white">
+                    Choose Size and Crust
                 </div>
-                <div class="row">
-                    <div class="col p-1 ps-2 border">
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="beef" id="beef" name="meat">
-                            <label class="form-check-label" for="beef">
-                                Beef
-                            </label>
+                <div class="card-body">
+                    <!--meats card-->
+                    <div class="card" style="width: 18rem;">
+                        <div class="card-header">
+                            Hand Tossed
                         </div>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">An item</li>
+                            <li class="list-group-item">A second item</li>
+                            <li class="list-group-item">A third item</li>
+                        </ul>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col p-1 ps-2 border">
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="ham" id="ham" name="meat">
-                            <label class="form-check-label" for="ham">
-                                Ham
-                            </label>
+                    <!--non-meats card-->
+                    <div class="card mt-4" style="width: 18rem;">
+                        <div class="card-header">
+                            Crispy Thin
                         </div>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">An item</li>
+                            <li class="list-group-item">A second item</li>
+                            <li class="list-group-item">A third item</li>
+                        </ul>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col p-1 ps-2 border">
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="philly" id="philly" name="meat">
-                            <label class="form-check-label" for="philly">
-                                Philly Steak
-                            </label>
-                        </div>
-                    </div>
+                <div class="card-footer">
+                    button here
                 </div>
-                <div class="row">
-                    <div class="col p-1 ps-2 border">
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="bacon" id="bacon" name="meat">
-                            <label class="form-check-label" for="bacon">
-                                Bacon
-                            </label>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!--Non-meats-->
-            <div class="m-3 mx-4">
-                <div class="row">
-                    <div class="col p-1 ps-2 border bg-light">
-                        Choose Non-Meats
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col p-1 ps-2 border">
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="green-peppers" id="green-peppers" name="non-meat">
-                            <label class="form-check-label" for="green-peppers">
-                                Green Peppers
-                            </label>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col p-1 ps-2 border">
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="mushrooms" id="mushrooms" name="non-meat">
-                            <label class="form-check-label" for="mushrooms">
-                                Mushrooms
-                            </label>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col p-1 ps-2 border">
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="onions" id="onions" name="non-meat">
-                            <label class="form-check-label" for="onions">
-                                Onions
-                            </label>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col p-1 ps-2 border">
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="jal-peppers" id="jal-peppers" name="non-meat">
-                            <label class="form-check-label" for="jal-peppers">
-                                Jalapeno Peppers
-                            </label>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-            <!--Footer-->
-            <div class="bg-light border p-2 d-flex justify-content-end">
-                <button class="btn btn-primary">Checkout<i class="fa-sharp fa-solid fa-cart-shopping ps-1"></i></button>
             </div>
         </div>
     </div>
