--- a/order-pizza.html
+++ b/order-pizza.html
@@ -61,6 +61,8 @@
             <button class="nav-link" id="toppings-tab" data-bs-toggle="tab" data-bs-target="#toppings" type="button" role="tab" aria-controls="toppings" aria-selected="false"><span class="badge bg-secondary rounded-pill">3</span>Toppings</button>
         </li>
     </ul>
+    <!--creating a form around the tabs to capture user selection-->
+    <form method="POST" action="https://request-inspector.glitch.me/">
     <!--Tab content-->
     <div class="tab-content" id="myTabContent">
         <!--size and crust-->
@@ -80,11 +82,11 @@
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item">Garlic seasoned crust with a rich, buttery taste.</li>
                             <li class="list-group-item">
-                                <input class="form-check-input" type="radio" name="pizza-size" id="tossed-small">
+                                <input class="form-check-input" type="radio" name="pizza-size" id="tossed-small" value="tossed-small">
                                 <label class="form-check-label" for="tossed-small">Small (10")</label>
                             </li>
                             <li class="list-group-item">
-                                <input class="form-check-input" type="radio" name="pizza-size" id="tossed-medium">
+                                <input class="form-check-input" type="radio" name="pizza-size" id="tossed-medium" value="tossed-medium">
                                 <label class="form-check-label" for="tossed-medium">Medium (12")</label>
                             </li>
                         </ul>
@@ -97,11 +99,11 @@
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item">Thin enough for optimum crispy to crunchy ratio.</li>
                             <li class="list-group-item">
-                                <input class="form-check-input" type="radio" name="pizza-size" id="thin-medium">
+                                <input class="form-check-input" type="radio" name="pizza-size" id="thin-medium" value="thin-medium">
                                 <label class="form-check-label" for="thin-medium">Medium (12")</label>
                             </li>
                             <li class="list-group-item">
-                                <input class="form-check-input" type="radio" name="pizza-size" id="thin-large">
+                                <input class="form-check-input" type="radio" name="pizza-size" id="thin-large" value="thin-large">
                                 <label class="form-check-label" for="thin-large">Large (14")</label>
                             </li>
                         </ul>
@@ -109,7 +111,7 @@
                 </div>
                 <!--footer with button (non-functional)-->
                 <div class="card-footer p-2 d-flex justify-content-end">
-                    <button class="btn btn-primary">Next Step ></button>
+                    <button type="button" class="btn btn-primary">Next Step ></button>
                 </div>
             </div>
         </div>
@@ -155,7 +157,7 @@
                             </li>
                             <li class="list-group-item">How Much?</li>
                             <li class="list-group-item">
-                                <select name="cheese-amount" id="sauce-amount" class="form-select p-1 ps-2">
+                                <select name="sauce-amount" id="sauce-amount" class="form-select p-1 ps-2">
                                     <option value="light">Light</option>
                                     <option value="normal" selected>Normal</option>
                                     <option value="extra">Extra</option>
@@ -168,8 +170,8 @@
                 <!--footer with button (non-functional)-->
                 <div class="card-footer p-2 d-flex justify-content-end">
                     <div class="btn-group">
-                        <button class="btn btn-primary">< Previous</button>
-                        <button class="btn btn-primary">Next Step ></button>
+                        <button type="button" class="btn btn-primary">< Previous</button>
+                        <button type="button" class="btn btn-primary">Next Step ></button>
                     </div>
                 </div>
             </div>
@@ -183,35 +185,79 @@
                 </div>
                 <div class="card-body">
                     <!--meats card-->
-                    <div class="card" style="width: 18rem;">
+                    <div class="card">
                         <div class="card-header">
-                            Hand Tossed
+                            Choose Meats
                         </div>
                         <ul class="list-group list-group-flush">
-                            <li class="list-group-item">An item</li>
-                            <li class="list-group-item">A second item</li>
-                            <li class="list-group-item">A third item</li>
+                            <li class="list-group-item">
+                                <input class="form-check-input" type="checkbox" value="beef" id="beef" name="meat">
+                                <label class="form-check-label" for="beef">
+                                    Beef
+                                </label>
+                            </li>
+                            <li class="list-group-item">
+                                <input class="form-check-input" type="checkbox" value="ham" id="ham" name="meat">
+                                <label class="form-check-label" for="ham">
+                                    Ham
+                                </label>
+                            </li>
+                            <li class="list-group-item">
+                                <input class="form-check-input" type="checkbox" value="philly" id="philly" name="meat">
+                                <label class="form-check-label" for="philly">
+                                    Philly Steak
+                                </label>
+                            </li>
+                            <li class="list-group-item">
+                                <input class="form-check-input" type="checkbox" value="bacon" id="bacon" name="meat">
+                                <label class="form-check-label" for="bacon">
+                                    Bacon
+                                </label>
+                            </li>
                         </ul>
                     </div>
                     <!--non-meats card-->
-                    <div class="card mt-4" style="width: 18rem;">
+                    <div class="card mt-4">
                         <div class="card-header">
-                            Crispy Thin
+                            Choose Non-Meats
                         </div>
                         <ul class="list-group list-group-flush">
-                            <li class="list-group-item">An item</li>
-                            <li class="list-group-item">A second item</li>
-                            <li class="list-group-item">A third item</li>
+                            <li class="list-group-item">
+                                <input class="form-check-input" type="checkbox" value="green-peppers" id="green-peppers" name="non-meat">
+                                <label class="form-check-label" for="green-peppers">
+                                    Green Peppers
+                                </label>
+                            </li>
+                            <li class="list-group-item">
+                                <input class="form-check-input" type="checkbox" value="mushrooms" id="mushrooms" name="non-meat">
+                                <label class="form-check-label" for="mushrooms">
+                                    Mushrooms
+                                </label>
+                            </li>
+                            <li class="list-group-item">
+                                <input class="form-check-input" type="checkbox" value="onions" id="onions" name="non-meat">
+                                <label class="form-check-label" for="onions">
+                                    Onions
+                                </label>
+                            </li>
+                            <li class="list-group-item">
+                                <input class="form-check-input" type="checkbox" value="jal-peppers" id="jal-peppers" name="non-meat">
+                                <label class="form-check-label" for="jal-peppers">
+                                    Jalapeno Peppers
+                                </label>
+                            </li>
                         </ul>
                     </div>
                 </div>
-                <div class="card-footer">
-                    button here
+                <!--footer with button (non-functional)-->
+                <div class="card-footer p-2 d-flex justify-content-end">
+                    <button type="submit" class="btn btn-primary">Checkout<i class="fa-sharp fa-solid fa-cart-shopping ps-1"></i></button>
                 </div>
             </div>
         </div>
     </div>
-
+    <!--end of user tab selection form-->
+    </form>
 </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
