added more basic structuring

--- a/t-block.html
+++ b/t-block.html
@@ -25,11 +25,29 @@
     <div class="row">
         <!--first half col-->
         <div class="col-12 col-md-4">
-            <p>1 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis, commodi consectetur eligendi, error incidunt laudantium nihil perferendis praesentium reprehenderit sequi totam veritatis. Ab aspernatur corporis dicta earum eos esse eum ex facilis illo, ipsum libero nobis numquam odio omnis perferendis quaerat quibusdam, quidem quis quod quos ratione repellendus sed ut.</p>
+            <!--skills and abilities-->
+            <div class="row">
+
+            </div>
+            <!--academic-->
+            <div class="row">
+
+            </div>
+            <!--professional experience-->
+            <div class="row">
+
+            </div>
         </div>
         <!--second half col-->
         <div class="col-12 col-md-8">
-            <p>2Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet deserunt doloremque error facilis impedit molestiae quibusdam sunt tenetur velit voluptatum. Ad adipisci aliquid amet animi aperiam autem consequuntur cum dolore ea eligendi enim eveniet incidunt iusto maxime minima, natus necessitatibus numquam omnis pariatur quas reiciendis tempore veritatis, voluptas! Culpa, dolores!</p>
+            <!--development projects-->
+            <div class="row">
+
+            </div>
+            <!--awards and involvement-->
+            <div class="row">
+
+            </div>
         </div>
     </div>
 </div>
