basic content filled out

--- a/t-block.html
+++ b/t-block.html
@@ -11,42 +11,67 @@
 <div class="container">
 <!--name row-->
     <div class="row text-center">
-        <p>kdfjs</p>
+        <h1>CODY THE DUCK</h1>
     </div>
-<!--description row-->
+    <!--description row-->
     <div class="row text-center">
-        <p>klsdjfsd</p>
+        <h3>Software Developer</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At deserunt dolor dolore, doloribus earum excepturi facilis illum impedit ipsam iusto labore modi mollitia, natus non officiis, sint soluta tempore tenetur.</p>
     </div>
-<!--links row-->
-    <div class="row">
-        <p>dklgdl</p>
+    <!--links row-->
+    <div class="row text-center">
+        <div class="col-12 col-md-3">numberr</div>
+        <div class="col-12 col-md-3">email</div>
+        <div class="col-12 col-md-3">linkin</div>
+        <div class="col-12 col-md-3">github</div>
     </div>
-<!--details row-->
+    <!--details row-->
     <div class="row">
         <!--first half col-->
         <div class="col-12 col-md-4">
             <!--skills and abilities-->
             <div class="row">
-
+                <h5>SKILLS AND ABILITIES</h5>
+                <ul class="ms-4">
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>Javascript</li>
+                    <li>Bootstrap</li>
+                </ul>
             </div>
             <!--academic-->
             <div class="row">
-
+                <h5>ACADEMIC</h5>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid aperiam consectetur culpa deleniti dolor eius hic magnam numquam omnis unde?</p>
             </div>
             <!--professional experience-->
             <div class="row">
-
+                <h5>PROFESSIONAL EXPERIENCE</h5>
+                <h6>Job 2</h6>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, ad doloribus eveniet inventore ipsa mollitia nulla officia quisquam voluptatibus! Quia!</p>
+                <h6>Job 2</h6>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, ad doloribus eveniet inventore ipsa mollitia nulla officia quisquam voluptatibus! Quia!</p>
             </div>
         </div>
         <!--second half col-->
         <div class="col-12 col-md-8">
             <!--development projects-->
             <div class="row">
-
+                <h5>DEVELOPMENT PROJECTS</h5>
+                <h6>Project 3</h6>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id, quam, reiciendis. Assumenda at fuga laborum necessitatibus nemo nisi nulla sit.</p>
+                <h6>Project 2</h6>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id, quam, reiciendis. Assumenda at fuga laborum necessitatibus nemo nisi nulla sit.</p>
+                <h6>Project 1</h6>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id, quam, reiciendis. Assumenda at fuga laborum necessitatibus nemo nisi nulla sit.</p>
             </div>
             <!--awards and involvement-->
             <div class="row">
-
+                <h5>AWARDS AND INVOLVEMENT</h5>
+                <h6>AWARDS 1</h6>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo voluptas, voluptatum. Exercitationem facilis ipsum quos. Architecto doloribus itaque quam sed!</p>
+                <h6>INVOLVEMENT 1</h6>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet atque dolores et incidunt laboriosam nemo nesciunt omnis perferendis reprehenderit rerum!</p>
             </div>
         </div>
     </div>
