--- a/t-block.html
+++ b/t-block.html
@@ -3,35 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <title>T-Block Resume</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
 
+
+
 <!--main container-->
 <div class="container">
 <!--name row-->
-    <div class="row text-center">
+    <div class="row text-center mt-3">
         <h1>CODY THE DUCK</h1>
     </div>
     <!--description row-->
-    <div class="row text-center">
+    <div class="row text-center my-3">
         <h3>Software Developer</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At deserunt dolor dolore, doloribus earum excepturi facilis illum impedit ipsam iusto labore modi mollitia, natus non officiis, sint soluta tempore tenetur.</p>
     </div>
     <!--links row-->
-    <div class="row text-center">
+    <div class="row text-center border-bottom border-5 border-success pb-3">
         <div class="col-12 col-md-3">numberr</div>
         <div class="col-12 col-md-3">email</div>
         <div class="col-12 col-md-3">linkin</div>
         <div class="col-12 col-md-3">github</div>
     </div>
     <!--details row-->
-    <div class="row">
+    <div class="row pt-4">
         <!--first half col-->
         <div class="col-12 col-md-4">
             <!--skills and abilities-->
-            <div class="row">
-                <h5>SKILLS AND ABILITIES</h5>
+            <div class="row mb-3">
+                <h5 class="text-primary">SKILLS AND ABILITIES</h5>
                 <ul class="ms-4">
                     <li>HTML</li>
                     <li>CSS</li>
@@ -40,13 +43,13 @@
                 </ul>
             </div>
             <!--academic-->
-            <div class="row">
-                <h5>ACADEMIC</h5>
+            <div class="row mb-3">
+                <h5 class="text-primary">ACADEMIC</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid aperiam consectetur culpa deleniti dolor eius hic magnam numquam omnis unde?</p>
             </div>
             <!--professional experience-->
-            <div class="row">
-                <h5>PROFESSIONAL EXPERIENCE</h5>
+            <div class="row mb-3">
+                <h5 class="text-primary">PROFESSIONAL EXPERIENCE</h5>
                 <h6>Job 2</h6>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, ad doloribus eveniet inventore ipsa mollitia nulla officia quisquam voluptatibus! Quia!</p>
                 <h6>Job 2</h6>
@@ -56,8 +59,8 @@
         <!--second half col-->
         <div class="col-12 col-md-8">
             <!--development projects-->
-            <div class="row">
-                <h5>DEVELOPMENT PROJECTS</h5>
+            <div class="row mb-3">
+                <h5 class="text-primary">DEVELOPMENT PROJECTS</h5>
                 <h6>Project 3</h6>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id, quam, reiciendis. Assumenda at fuga laborum necessitatibus nemo nisi nulla sit.</p>
                 <h6>Project 2</h6>
@@ -66,8 +69,8 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id, quam, reiciendis. Assumenda at fuga laborum necessitatibus nemo nisi nulla sit.</p>
             </div>
             <!--awards and involvement-->
-            <div class="row">
-                <h5>AWARDS AND INVOLVEMENT</h5>
+            <div class="row mb-3">
+                <h5 class="text-primary">AWARDS AND INVOLVEMENT</h5>
                 <h6>AWARDS 1</h6>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo voluptas, voluptatum. Exercitationem facilis ipsum quos. Architecto doloribus itaque quam sed!</p>
                 <h6>INVOLVEMENT 1</h6>
