--- a/t-block.html
+++ b/t-block.html
@@ -7,9 +7,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-
-
-
 <!--main container-->
 <div class="container">
 <!--name row-->
@@ -23,10 +20,18 @@
     </div>
     <!--links row-->
     <div class="row text-center border-bottom border-5 border-success pb-3">
-        <div class="col-12 col-md-3">numberr</div>
-        <div class="col-12 col-md-3">email</div>
-        <div class="col-12 col-md-3">linkin</div>
-        <div class="col-12 col-md-3">github</div>
+        <div class="col-12 col-md-3">
+            <i class="bi bi-telephone-fill"></i> 210-123-1234
+        </div>
+        <div class="col-12 col-md-3">
+            <i class="bi bi-envelope-fill"></i> cody@codeup.com
+        </div>
+        <div class="col-12 col-md-3">
+            <i class="bi bi-linkedin"></i> @cody-the-duck
+        </div>
+        <div class="col-12 col-md-3">
+            <i class="bi bi-github"></i> @cody-the-duck
+        </div>
     </div>
     <!--details row-->
     <div class="row pt-4">
@@ -35,7 +40,7 @@
             <!--skills and abilities-->
             <div class="row mb-3">
                 <h5 class="text-primary">SKILLS AND ABILITIES</h5>
-                <ul class="ms-4">
+                <ul class="ms-5">
                     <li>HTML</li>
                     <li>CSS</li>
                     <li>Javascript</li>
@@ -62,11 +67,11 @@
             <div class="row mb-3">
                 <h5 class="text-primary">DEVELOPMENT PROJECTS</h5>
                 <h6>Project 3</h6>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id, quam, reiciendis. Assumenda at fuga laborum necessitatibus nemo nisi nulla sit.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto delectus ducimus eligendi est, ex exercitationem expedita fugit, hic iste labore maxime molestiae mollitia natus nesciunt placeat praesentium quasi, sed temporibus.</p>
                 <h6>Project 2</h6>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id, quam, reiciendis. Assumenda at fuga laborum necessitatibus nemo nisi nulla sit.</p>
                 <h6>Project 1</h6>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id, quam, reiciendis. Assumenda at fuga laborum necessitatibus nemo nisi nulla sit.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita molestias officiis rem? Quis reiciendis soluta voluptatem! Consequuntur deleniti dolorem doloremque, ea eaque facilis ipsa iure minima non nulla quasi quos recusandae voluptatum! Earum, incidunt laborum?</p>
             </div>
             <!--awards and involvement-->
             <div class="row mb-3">
@@ -74,7 +79,7 @@
                 <h6>AWARDS 1</h6>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo voluptas, voluptatum. Exercitationem facilis ipsum quos. Architecto doloribus itaque quam sed!</p>
                 <h6>INVOLVEMENT 1</h6>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet atque dolores et incidunt laboriosam nemo nesciunt omnis perferendis reprehenderit rerum!</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid incidunt inventore possimus quae quia! Dolorum et fuga libero molestiae odio sit veritatis. Aliquam cumque dicta laborum optio qui quibusdam recusandae!</p>
             </div>
         </div>
     </div>
