--- a/dom-query-js.html
+++ b/dom-query-js.html
@@ -7,6 +7,7 @@
 <body>
 
 <h1 id="main-header">Hello World!</h1>
+<button id="btn-main">Change Main Header</button>
 <ul>
     <li data-dbid="1">Item 1</li>
     <li data-dbid="2">Item 2</li>
@@ -14,7 +15,9 @@
     <li data-dbid="4">Item 4</li>
     <li data-dbid="5">Item 5</li>
 </ul>
+<button id="btn-list">Change Color of List Items</button>
 <h2 id="sub-header">Hello Again.</h2>
+<button id="btn-sub-header">Change Color of Sub-Header</button>
 <p class="sub-paragraph">
     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
     eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
@@ -24,6 +27,7 @@
     pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
     culpa qui officia deserunt mollit anim id est laborum.
 </p>
+<button id="btn-sub-para">Change Sub-Paragraph</button>
 
 <script>
     (function() {
@@ -32,36 +36,59 @@
         var mainHeader = document.getElementById('main-header');
 
         // TODO: Set inner html of mainHeader to "JavaScript is Cool"
-        mainHeader.innerHTML = "Javascript is Cool";
+        var btnMain = document.getElementById("btn-main");
+        btnMain.addEventListener('click', function() {
+            mainHeader.innerHTML = "Javascript is Cool";
+        })
 
         // TODO: Uncomment the next line and get the sub header element by id
         var subHeader = document.getElementById('sub-header');
 
         // TODO: Set the text color of subHeader to blue
-        subHeader.style.color = 'blue';
+        var btnSubHeader = document.getElementById('btn-sub-header')
+        btnSubHeader.addEventListener('click', function() {
+            subHeader.style.color = 'blue';
+        })
+
 
         // TODO: Uncomment the next line and get all list items
         var listItems = document.getElementsByTagName('li');
 
         // TODO: Set text color on every other list item to grey
-        for(var i = 0; i < listItems.length; i++) {
-           if(i % 2 != 0) {
-                listItems[i].style.color = 'grey';
-           }
+        function changeToGrey() {
+            for(var i = 0; i < listItems.length; i++) {
+                if(i % 2 != 0) {
+                    listItems[i].style.color = 'grey';
+                }
+            }
         }
 
         // TODO: Set text color of li with dbid = 1 to blue
-        for(var i = 0; i < listItems.length; i++) {
-            if(listItems[i].getAttribute('data-dbid') == 1) {
-                listItems[i].style.color = 'blue'
+        function changetoBlue() {
+            for(var i = 0; i < listItems.length; i++) {
+                if(listItems[i].getAttribute('data-dbid') == 1) {
+                    listItems[i].style.color = 'blue'
+                }
             }
         }
+
 
         // TODO: Uncomment the next line and get all elements with class name sub-paragraph
         var subParagraphs = document.getElementsByClassName('sub-paragraph');
 
         // TODO: Change the text in the first sub paragraph to "Mission Accomplished!"
-        subParagraphs[0].innerHTML = 'Mission Accomplished!';
+        var btnSubPara = document.getElementById('btn-sub-para');
+        btnSubPara.addEventListener('click', function() {
+            subParagraphs[0].innerHTML = 'Mission Accomplished!';
+        })
+
+
+    //     changing list items through button
+        var btnList = document.getElementById('btn-list');
+        btnList.addEventListener('click', function() {
+            changetoBlue();
+            changeToGrey();
+        })
     })();
 </script>
 </body>
