--- a/dom-query-js.html
+++ b/dom-query-js.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>DOM: Query and Modify</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
 
 <h1 id="main-header">Hello World!</h1>
-<button id="btn-main">Change Main Header</button>
+<button id="btn-main" class="btn btn-secondary m-3 mt-2">Change Main Header</button>
 <ul>
     <li data-dbid="1">Item 1</li>
     <li data-dbid="2">Item 2</li>
@@ -15,9 +16,9 @@
     <li data-dbid="4">Item 4</li>
     <li data-dbid="5">Item 5</li>
 </ul>
-<button id="btn-list">Change Color of List Items</button>
+<button id="btn-list" class="btn btn-secondary m-3 mt-2">Change Color of List Items</button>
 <h2 id="sub-header">Hello Again.</h2>
-<button id="btn-sub-header">Change Color of Sub-Header</button>
+<button id="btn-sub-header" class="btn btn-secondary m-3 mt-2">Change Color of Sub-Header</button>
 <p class="sub-paragraph">
     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
     eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
@@ -27,7 +28,7 @@
     pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
     culpa qui officia deserunt mollit anim id est laborum.
 </p>
-<button id="btn-sub-para">Change Sub-Paragraph</button>
+<button id="btn-sub-para" class="btn btn-secondary m-3 mt-2">Change Sub-Paragraph</button>
 
 <script>
     (function() {
